# HRMS-Lite

./: README.md  render.yaml
backend/: .dockerignore  Dockerfile  database.py  main.py  models.py  pyproject.toml  requirements.txt
backend/routers/: attendance.py  employees.py
frontend/: package-lock.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: attendance.js  client.js  employees.js
frontend/src/components/layout/: Layout.jsx  Sidebar.jsx
frontend/src/components/ui/: Badge.jsx  Button.jsx  EmptyState.jsx  Input.jsx  LoadingSpinner.jsx  Modal.jsx  Select.jsx  Toast.jsx
frontend/src/hooks/: useAttendance.js  useEmployees.js
frontend/src/pages/: Attendance.jsx  Dashboard.jsx  EmployeeDetail.jsx  Employees.jsx
